Change synoptics pages

--- a/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
@@ -30,24 +30,16 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="72,148,0,0" 
+            Margin="78,130,0,0" 
             VerticalAlignment="Top" 
             ComponentName="322-61-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="518,274,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="330-42-TT1" RenderTransformOrigin="0.478,0.56"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="518,218,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="330-41-LT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="518,132,0,0" 
+            Margin="441,66,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="470,366,0,0" VerticalAlignment="Top" Width="74" StatusComponent="330-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="678,366,0,0" VerticalAlignment="Top" Width="50" StatusComponent="330-02-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="587,366,0,0" VerticalAlignment="Top" Width="61" StatusComponent="330-23-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="532,357,0,0" VerticalAlignment="Top" Width="96" StatusComponent="330-23-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="780,357,0,0" VerticalAlignment="Top" Width="50" StatusComponent="330-02-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Center" Margin="0,357,0,0" VerticalAlignment="Top" Width="90" StatusComponent="330-23-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="866,111,0,0" VerticalAlignment="Top" Width="31" Color="Water" StatusComponent="330-02-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="430,152,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="58" StatusComponent="322-01-MA1">
             <Labels:Pipe.RenderTransform>
@@ -70,11 +62,11 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="620,399,0,0" 
+            Margin="725,283,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-02-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="518,399,0,0" 
+            Margin="602,283,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-23-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -119,7 +111,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="452,348,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="40" StatusComponent="330-23-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="826,53,0,0" VerticalAlignment="Top" Width="114" StatusComponent="330-02-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="674,205,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="308" StatusComponent="330-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -129,18 +122,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="724,53,0,0" VerticalAlignment="Top" Width="216" StatusComponent="330-02-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="568,210,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="316" StatusComponent="330-02-MA1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="640,334,0,0" VerticalAlignment="Top" Height="70" Width="51" RenderTransformOrigin="0.5,0.5">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="745,324,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -157,7 +139,7 @@
         <Labels:Pipe HorizontalAlignment="Left" Margin="276,190,0,0" VerticalAlignment="Top" Width="64" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="382,190,0,0" VerticalAlignment="Top" Width="59" Color="Water" StatusComponent="370-25-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="312,222,0,0" 
+            Margin="312,208,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-25-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -165,8 +147,7 @@
             VerticalAlignment="Top" 
             ComponentName="371-22-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="372,314,0,0" VerticalAlignment="Top" Width="63" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV1"/>
-        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="363,124,0,0" VerticalAlignment="Top" Height="224" Width="218"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="513,318,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="597,310,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -260,8 +241,8 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="564,552,0,0" VerticalAlignment="Top" Color="ByProduct" Width="60" StatusComponent="352-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="550,568,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="706,659,0,0" VerticalAlignment="Top" Color="Water" Width="147" StatusComponent="352-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="789,719,0,0" VerticalAlignment="Top" Color="Water" Width="124" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -271,19 +252,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:Waste HorizontalAlignment="Left" Margin="532,558,0,0" VerticalAlignment="Top" Height="60" Width="68"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="677,574,0,0" VerticalAlignment="Top" Color="Water" Width="176" StatusComponent="352-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="753,670,0,0" VerticalAlignment="Top" Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="352-01-MA1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="673,509,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="352-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="719,609,0,0" VerticalAlignment="Top" Color="Water" Width="26" RenderTransformOrigin="0.5,0.5" StatusComponent="352-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -294,11 +263,11 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="620,612,0,0" 
+            Margin="620,532,0,0" 
             VerticalAlignment="Top" 
             ComponentName="352-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="761,399,0,0" 
+            Margin="745,532,0,0" 
             VerticalAlignment="Top" 
             ComponentName="352-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="798,602,0,0" VerticalAlignment="Top" Color="Water" Width="264" RenderTransformOrigin="0.5,0.5" StatusComponent="370-21-CV1">
@@ -316,13 +285,13 @@
             Margin="1138,449,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="276,772,0,0" VerticalAlignment="Top" Width="369" Color="Water" StatusComponent="370-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="681,772,0,0" VerticalAlignment="Top" Width="178" Color="Water" StatusComponent="370-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="276,772,0,0" VerticalAlignment="Top" Width="238" Color="Water" StatusComponent="370-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="523,772,0,0" VerticalAlignment="Top" Width="336" Color="Water" StatusComponent="370-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="620,688,0,0" 
+            Margin="462,688,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-01-MA1"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="640,739,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="482,739,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -332,7 +301,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="196,692,0,0" VerticalAlignment="Top" Width="164" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="191,687,0,0" VerticalAlignment="Top" Width="174" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -352,14 +321,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="382,472,0,0" VerticalAlignment="Top" Color="Water" Width="318" StatusComponent="370-25-CV2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="523,496,0,0" VerticalAlignment="Top" Color="Water" Width="199" StatusComponent="370-25-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="312,495,0,0" 
+            Margin="462,532,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-25-CV2"/>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="757,675,0,0" VerticalAlignment="Top" Height="196" Width="345"/>
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="757,659,0,0" VerticalAlignment="Top" Height="196" Width="345"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="884,749,0,0" 
+            Margin="884,735,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-41-LT1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="294,587,0,0" VerticalAlignment="Top" Color="Vapor" Width="46" StatusComponent="354-21-CV1"/>
@@ -374,18 +343,18 @@
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="312,612,0,0" 
+            Margin="312,622,0,0" 
             VerticalAlignment="Top" 
             ComponentName="354-21-CV1"/>
-        <Rectangle HorizontalAlignment="Left" Height="1" Margin="236,525,0,0" Stroke="Black" VerticalAlignment="Top" Width="37"/>
-        <Ellipse HorizontalAlignment="Left" Height="16" Margin="270,518,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
-        <Rectangle HorizontalAlignment="Left" Height="1" Margin="228,656,0,0" Stroke="Black" VerticalAlignment="Top" Width="50"/>
-        <Ellipse HorizontalAlignment="Left" Height="16" Margin="270,649,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
+        <Rectangle HorizontalAlignment="Left" Height="1" Margin="236,535,0,0" Stroke="Black" VerticalAlignment="Top" Width="37"/>
+        <Ellipse HorizontalAlignment="Left" Height="16" Margin="270,528,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
+        <Rectangle HorizontalAlignment="Left" Height="1" Margin="228,646,0,0" Stroke="Black" VerticalAlignment="Top" Width="50"/>
+        <Ellipse HorizontalAlignment="Left" Height="16" Margin="270,639,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="150,501,0,0" 
+            Margin="150,511,0,0" 
             VerticalAlignment="Top" 
             ComponentName="354-41-TT1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="659,509,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="370-25-CV2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="646,569,0,0" VerticalAlignment="Top" Color="Water" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="370-25-CV2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -395,7 +364,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:RTF_Microfilter HorizontalAlignment="Left" Margin="600,511,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="132" Height="107">
+        <Machines:RTF_Microfilter HorizontalAlignment="Left" Margin="619,580,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="132" Height="107">
             <Machines:RTF_Microfilter.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -405,8 +374,8 @@
                 </TransformGroup>
             </Machines:RTF_Microfilter.RenderTransform>
         </Machines:RTF_Microfilter>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="278,472,0,0" VerticalAlignment="Top" Width="62" Color="Water" StatusComponent="370-01-MA1"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="311,424,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="278,496,0,0" VerticalAlignment="Top" Width="213" Color="Water" StatusComponent="370-01-MA1"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="457,449,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -417,10 +386,10 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="150,632,0,0" 
+            Margin="150,622,0,0" 
             VerticalAlignment="Top" 
             ComponentName="354-42-PT2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="710,472,0,0" VerticalAlignment="Top" Color="Water" Width="73" StatusComponent="352-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="730,598,0,0" VerticalAlignment="Top" Color="Water" Width="41" StatusComponent="352-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1138,370,0,0" 
             VerticalAlignment="Top" 
@@ -455,7 +424,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="756,424,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="740,550,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -475,5 +444,26 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="647,688,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="352-61-LS1"/>
+        <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="299,68,0,0" VerticalAlignment="Top" Height="326" Width="374"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="441,275,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="330-42-TT1" RenderTransformOrigin="0.478,0.56"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="441,207,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="330-41-LT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="556,142,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="330-MIXER"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1218,62,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="330-WASHING"/>
     </Grid>
 </UserControl>
