Add Bag Component
Added BB component + minor changes in Synoptics

--- a/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
@@ -70,7 +70,7 @@
             VerticalAlignment="Top" 
             ComponentName="330-23-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1068,196,0,0" 
+            Margin="1039,193,0,0" 
             VerticalAlignment="Top" 
             ComponentName="376-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="979,94,0,0" VerticalAlignment="Top" Width="45" StatusComponent="362-01-MA1"/>
@@ -95,13 +95,13 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1210,355,0,0" VerticalAlignment="Top" Width="66" StatusComponent="376-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1174,0,0,0" VerticalAlignment="Center" Width="89" StatusComponent="376-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1218,196,0,0" 
+            Margin="1195,193,0,0" 
             VerticalAlignment="Top" 
             ComponentName="380-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1177,266,0,0" VerticalAlignment="Top" Color="Water" Width="70" StatusComponent="380-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1140,304,0,0" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" Height="5" StatusComponent="380-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1157,266,0,0" VerticalAlignment="Top" Color="Water" Width="70" StatusComponent="380-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1120,304,0,0" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" Height="5" StatusComponent="380-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -185,10 +185,9 @@
             Margin="895,162,0,0" 
             VerticalAlignment="Top" 
             ComponentName="362-01-MA1"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1147,303,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1263,332,0,0" 
-            VerticalAlignment="Top" 
+            Margin="1250,0,0,0" 
+            VerticalAlignment="Center" 
             JumpFromLabel="380-01-MA1" 
             JumpToLabel="430-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="988,574,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1"/>
@@ -270,7 +269,7 @@
             Margin="745,532,0,0" 
             VerticalAlignment="Top" 
             ComponentName="352-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="798,602,0,0" VerticalAlignment="Top" Color="Water" Width="264" RenderTransformOrigin="0.5,0.5" StatusComponent="370-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="818,612,0,0" VerticalAlignment="Top" Color="Water" Width="224" RenderTransformOrigin="0.5,0.5" StatusComponent="370-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -280,9 +279,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="929,472,0,0" VerticalAlignment="Top" Color="Water" Width="148" StatusComponent="370-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="929,503,0,0" VerticalAlignment="Top" Color="Water" Width="148" StatusComponent="370-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1138,449,0,0" 
+            Margin="1138,480,0,0" 
             VerticalAlignment="Top" 
             ComponentName="370-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="276,772,0,0" VerticalAlignment="Top" Width="238" Color="Water" StatusComponent="370-01-MA1"/>
@@ -390,11 +389,7 @@
             VerticalAlignment="Top" 
             ComponentName="354-42-PT2"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="730,598,0,0" VerticalAlignment="Top" Color="Water" Width="41" StatusComponent="352-21-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1138,370,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="380-01-MA1"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1044,424,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1044,455,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -414,7 +409,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1213,218,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1193,218,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -465,5 +460,29 @@
             Margin="1218,62,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-WASHING"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1032,0,0,0" 
+            VerticalAlignment="Center" 
+            ComponentName="380-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1155,401,0,0" VerticalAlignment="Top" Width="38" StatusComponent="376-01-MA1" RenderTransformOrigin="0.5,0.5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="1066,270,0,0" VerticalAlignment="Top" Height="158" Width="124" RenderTransformOrigin="0.5,0.5">
+            <Machines:DCE_DryingCentrifuge.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:DCE_DryingCentrifuge.RenderTransform>
+        </Machines:DCE_DryingCentrifuge>
     </Grid>
 </UserControl>
