--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -18,7 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="918,208,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="917,208,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1"/>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="362,244,0,0" VerticalAlignment="Top" Height="124" Width="136"/>
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="340,356,0,0" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="570,268,0,0" VerticalAlignment="Top" Width="184" StatusComponent="430-05-MA1"/>
@@ -44,11 +44,11 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="142,312,0,0" 
+            Margin="142,313,0,0" 
             VerticalAlignment="Top" 
             ComponentName="430-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="264,388,0,0" 
+            Margin="270,388,0,0" 
             VerticalAlignment="Top" 
             ComponentName="430-04-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -83,7 +83,7 @@
             Margin="548,190,0,0" 
             VerticalAlignment="Top" 
             ComponentName="430-05-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="312,208,0,0" VerticalAlignment="Top" Color="Water" Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="430-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="312,212,0,0" VerticalAlignment="Top" Color="Water" Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="430-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -93,7 +93,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="388,132,0,0" VerticalAlignment="Top" Color="Water" Width="68" StatusComponent="430-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="388,136,0,0" VerticalAlignment="Top" Color="Water" Width="68" StatusComponent="430-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="118,300,0,0" VerticalAlignment="Top" Color="Water" Width="130" StatusComponent="436-07-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="430,66,0,0" 
@@ -127,18 +127,18 @@
         <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="780,190,0,0" VerticalAlignment="Top" Height="152" Width="160"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="830,102,0,0" VerticalAlignment="Top" Height="54" Width="62"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="662,340,0,0" 
+            Margin="682,341,0,0" 
             VerticalAlignment="Top" 
             ComponentName="524-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="816,338,0,0" 
+            Margin="816,341,0,0" 
             VerticalAlignment="Top" 
             ComponentName="526-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="740,104,0,0" 
             VerticalAlignment="Top" 
             ComponentName="526-02-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="962,219,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="26" StatusComponent="526-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="948,233,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="53" StatusComponent="526-01-MA1" Height="8">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -149,7 +149,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1020,236,0,0" 
+            Margin="1020,265,0,0" 
             VerticalAlignment="Top" 
             ComponentName="528-01-MA1"/>
         <Rectangle HorizontalAlignment="Left" Height="42" Margin="918,486,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
@@ -175,7 +175,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="430,672,0,0" 
+            Margin="430,675,0,0" 
             VerticalAlignment="Top" 
             ComponentName="440-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="-34,452,0,0" VerticalAlignment="Top" Color="Water" Width="308" RenderTransformOrigin="0.5,0.5" StatusComponent="436-07-MA1">
@@ -207,7 +207,7 @@
             ComponentName="436-01-MA1"/>
         <Rectangle HorizontalAlignment="Left" Height="42" Margin="312,236,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="268,190,0,0" 
+            Margin="270,190,0,0" 
             VerticalAlignment="Top" 
             ComponentName="430-02-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -224,7 +224,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="940,214,0,0" VerticalAlignment="Top" Height="90" Width="70"/>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="940,244,0,0" VerticalAlignment="Top" Height="90" Width="70"/>
         <Machines:DV_Diverter_Y HorizontalAlignment="Left" Margin="956,440,0,0" VerticalAlignment="Top" Height="74" Width="82"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1091,496,0,0" VerticalAlignment="Top" Width="126" StatusComponent="526-01-MA1"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1028,444,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
@@ -301,12 +301,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VSP_SeparationTank HorizontalAlignment="Left" Margin="152,200,0,0" VerticalAlignment="Top" Height="254" Width="376"/>
+        <Machines:VSP_SeparationTank HorizontalAlignment="Left" Margin="152,201,0,0" VerticalAlignment="Top" Height="254" Width="376"/>
         <Machines:SeparationPaddle HorizontalAlignment="Left" Margin="340,282,0,0" VerticalAlignment="Top" Height="34" Width="52"/>
         <Machines:SeparationPaddle HorizontalAlignment="Left" Margin="238,282,0,0" VerticalAlignment="Top" Height="34" Width="52"/>
         <Machines:SeparationPaddle HorizontalAlignment="Left" Margin="288,282,0,0" VerticalAlignment="Top" Height="34" Width="52"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="272,318,0,0" 
+            Margin="270,321,0,0" 
             VerticalAlignment="Top" 
             ComponentName="430-41-LT1"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="162,119,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
@@ -319,7 +319,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="425,81,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="425,88,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -329,5 +329,6 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1170,701,0,0" VerticalAlignment="Top" ComponentName="959-61-BAG"/>
     </Grid>
 </UserControl>
