--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -330,5 +330,6 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1170,701,0,0" VerticalAlignment="Top" ComponentName="959-61-BAG"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1005,716,0,0" VerticalAlignment="Top" ComponentName="808-71-ECS1"/>
     </Grid>
 </UserControl>
