Remove bitmap caching

--- a/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.GR1" mc:Ignorable="d" CacheMode="BitmapCache"
+             x:Class="Prevu.Synoptics.GR1" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
         <Labels:Pipe HorizontalAlignment="Left" Margin="868,226,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1">
