--- a/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.HW1" mc:Ignorable="d" CacheMode="BitmapCache"
+             x:Class="Prevu.Synoptics.HW1" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-4,5,4,-5">
         <Labels:DeviceLabel HorizontalAlignment="Left" 
