--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.HW2" mc:Ignorable="d" CacheMode="BitmapCache"
+             x:Class="Prevu.Synoptics.HW2" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
         <Labels:Pipe HorizontalAlignment="Left" Margin="448,304,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="52" Color="ByProduct" StatusComponent="430-03-MA1">
