--- a/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
@@ -260,7 +260,7 @@
                         VerticalAlignment="Top" 
                         ComponentName="228-01-MA1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="436,296,0,0" 
+            Margin="436,271,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-01-MA1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -308,5 +308,9 @@
             Margin="802,510,0,0" 
             VerticalAlignment="Top" 
             ComponentName="286-01-MA1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="436,337,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="230-01-YA1"/>
   </Grid>
 </UserControl>
