Add LS1.LS2 at pipe visibility of IT808

--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -117,8 +117,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1248,590,0,0" VerticalAlignment="Top" Width="62" StatusComponent="526-01-MA1" VisibilitySignal="808-21-ZS2"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1252,644,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="112" StatusComponent="526-01-MA1" VisibilitySignal="808-21-ZS2">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1248,590,0,0" VerticalAlignment="Top" Width="62" StatusComponent="526-01-MA1" VisibilitySignal="LS2" VisibilityComponent="808-21-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1252,644,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="112" StatusComponent="526-01-MA1" VisibilitySignal="LS2" VisibilityComponent="808-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -128,8 +128,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1122,590,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1" VisibilitySignal="808-21-ZS1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1074,638,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="100" StatusComponent="526-01-MA1" VisibilitySignal="808-21-ZS1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1122,590,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1" VisibilitySignal="LS1" VisibilityComponent="808-21-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1074,638,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="100" StatusComponent="526-01-MA1" VisibilitySignal="LS1" VisibilityComponent="808-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
